--- a/nachos.adoc
+++ b/nachos.adoc
@@ -12,6 +12,7 @@ A recipe a restaurant in a RailRoad car in Waco Texas.
 Cook in oven at 500 degrees fro 90 seconds.
 
 Sprinkle with shredded lettuce and tomatoes.
-Add sour cream spoonful.
+
+Add soponful of sour cream or pinch of dried onion powder.
 
 
